My first commit - creating a header and footer

--- a/src/index.css
+++ b/src/index.css
@@ -44,7 +44,7 @@ button {
   font-family: inherit;
   background-color: #656be0;
   cursor: pointer;
-  transition: border-color 0.25s;
+  transition: border-color 0.25s ease;
 }
 button:hover {
   border-color: #2931c5;
@@ -58,6 +58,7 @@ button:focus-visible {
   :root {
     color: #213547;
     background-color: #ffffff;
+  
   }
   a:hover {
     color: #747bff;
